# aoc-2022

./: Cargo.toml  run-local.sh  run.sh
.docker/: Dockerfile
answers/: 01  02  03  05  06  07  08  09  10  12  16  21
inputs/extra/: 06.sample  16.stupid
src/commons/: grid.rs  io.rs  test_helpers.rs
